--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Happy Birthday Trisha</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Trisha">
 	<meta name="robots" content="index, follow" />
@@ -109,29 +109,29 @@
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
+				<p>ajker din ta khub special</p>
+				<p>It's your Birthday</p>
+				<p>can't meet u today, kichu korteo parlam na</p>
+				<p>But we can try...</p>
+				<p>to celebrate in a different way</p>
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
+				<p>I wish you a</p>
+				<p>very very happy & the happiest birthday</p>
+				<p>thanks for being there for me</p>
 				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
+				<p>I am sorry, I wish you can forgive me</p>
+				<p>Esob baad de</p>
 				<p>you live as a free bird...</p>
 				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
+				<p>Now things are getting a bit different...</p>
 				<p>real story of your life</p>
 				<p>is just about to begin</p>
-				<p>indeed..</p>
+				<p>indeed..you are working hard</p>
 				<p>but...</p>
 				<p>don't worry</p>
 				<p>because...</p>
@@ -141,14 +141,14 @@
 				<p>and I hope</p>
 				<p>you'll find...</p>
 				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
+				<p>Sobsomoy mone rakhbi, I am always there for u</p>
 				<p>enjoy every single moment...</p>
 				<p>that you experience today</p>
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday Miss Trisha Maji</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -161,7 +161,7 @@
 					<button class="btn btn-primary" id="cake_fadein">Cake Banaisi...</button>
 					<button class="btn btn-primary" id="light_candle">Candle ta Jala age</button>
 					<button class="btn btn-primary" id="wish_message">H A P P Y   B I R T H D A Y</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">Ebar ami speech debo</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
