--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 				<p>happiness along the way</p>
 				<p>Sobsomoy mone rakhbi, I am always there for u</p>
 				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
+				<p>celebrate & party hard</p>
+				<p>keep up your most beautiful smile</p>
+				<p>and make the best memories..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
 				<p>a very happy birthday Miss Trisha Maji</p>
