--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
+    <img src="IMG_5948.jpg" width="20%">
  
 
 	<div class="container">
