--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
 	<title>Happy Birthday Trisha</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Trisha">
 	<meta name="robots" content="index, follow" />
