--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<img src="banner.png" class="bannar">
-				<img src="B612_20160808_224731-1.jpg" width="100" height="200">
+				<img src="B612_20160808_224731-1.jpg" width="150" height="200" class="bannar">
 			</div>
 		</div>
 		<div class="row cake-cover">
