--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 			</div>
 		</div>
 		<div class="row cake-cover">
-			<img src="B612_20160808_224731-1.jpg" width="150" height="200" style="float:right" class="bannar">
+			<img src="B612_20160808_224731-1.jpg" width="300" height="400" style="float:right" class="bannar">
+			<img src="20210125180707_IMG_1563.JPG" width="300" height="400" style="float:right" class="bannar">
 			<div class="col-md-12 texr-center">
 				<div class="cake">
 				  <div class="velas">
