--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday Trisha</title>
+	<title>Happy Birthday Sir</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Trisha">
@@ -109,9 +109,9 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
+				<p>SIR</p>
+				<p>ooo sir</p>
+				<p>sir go</p>
 				<p>another year has gone</p>
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
